--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.26.1",
+    "mongodb": "^4.5.0",
     "next": "12.1.5",
+    "next-connect": "^0.12.2",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "sass": "^1.50.0"
   },
   "devDependencies": {
     "eslint": "8.13.0",
